objects/disco__New_Form_button__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>new form buttons for mobile cards</description>
    <fields>
        <fullName>disco__Label__c</fullName>
        <description>button label</description>
        <inlineHelpText>button label</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_1__c</fullName>
        <description>button url</description>
        <inlineHelpText>button url</inlineHelpText>
        <label>Link 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_2__c</fullName>
        <description>button url</description>
        <inlineHelpText>button url</inlineHelpText>
        <label>Link 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_3__c</fullName>
        <description>button url</description>
        <inlineHelpText>button url</inlineHelpText>
        <label>Link 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>New Form Button</label>
</CustomObject>